Aggiunto title e description

--- a/public/public/index.html
+++ b/public/public/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8">
+
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/matteomanzinello-favicon.png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39542008-4"></script>
   <script>
@@ -18,6 +23,8 @@
   </script>
 
   <title>Matteo Manzinello</title>
+  <meta name="description" content="26-years-old, computer engineer, freelance developer" />
+
 </head>
 
 <body>
