Aggiornato index.html

--- a/public/public/index.html
+++ b/public/public/index.html
@@ -23,7 +23,7 @@
   </script>
 
   <title>Matteo Manzinello</title>
-  <meta name="description" content="26-years-old, computer engineer, freelance developer" />
+  <meta name="description" content="26, a computer engineer, a freelance developer" />
 
 </head>
 
