--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
 
-<head>
+    <link
+      rel="icon"
+      type="image/png"
+      href="%PUBLIC_URL%/images/matteomanzinello-favicon.png"
+    />
 
-  <meta charset="utf-8">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
 
-  <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/matteomanzinello-favicon.png">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-39542008-4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+      gtag("config", "UA-39542008-4");
+    </script>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39542008-4"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+    <title>Matteo Manzinello</title>
+    <meta
+      name="description"
+      content="26, a computer engineer, a freelance developer"
+    />
+  </head>
 
-    gtag('config', 'UA-39542008-4');
-  </script>
-
-  <title>Matteo Manzinello</title>
-  <meta name="description" content="26, a computer engineer, a freelance developer" />
-
-</head>
-
-<body>
-  <noscript>
-    You need to enable JavaScript to run this app.
-  </noscript>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
+    <div id="root"></div>
+  </body>
 </html>
