--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
+
     <script>
       (function(w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -13,20 +15,23 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-T2H8JL3");
     </script>
-    <meta charset="utf-8" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      href="%PUBLIC_URL%/images/matteomanzinello-favicon.png"
-    />
-
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Hotjar Tracking Code for https://matteomanzinello.com -->
+    <script>
+      (function(h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function() {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 1227873, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
 
     <script
       async
@@ -41,6 +46,19 @@
 
       gtag("config", "UA-39542008-4");
     </script>
+
+    <link
+      rel="icon"
+      type="image/png"
+      href="%PUBLIC_URL%/images/matteomanzinello-favicon.png"
+    />
+
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Matteo Manzinello</title>
     <meta
