--- a/public/index.html
+++ b/public/index.html
@@ -78,5 +78,6 @@
     ></noscript>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://unpkg.com/mailgo@latest/dist/mailgo.min.js"></script>
   </body>
 </html>
