updated description and manifest

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
     <title>Matteo Manzinello</title>
     <meta
       name="description"
-      content="26, a computer engineer, a freelance developer"
+      content="26, a creative, a computer engineer, a freelance developer"
     />
   </head>
 
