--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
 
+    <!-- Google Tag Manager -->
     <script>
       (function(w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -15,20 +16,7 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-T2H8JL3");
     </script>
-
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-39542008-4"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "UA-39542008-4");
-    </script>
+    <!-- End Google Tag Manager -->
 
     <link
       rel="icon"
@@ -51,6 +39,7 @@
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-T2H8JL3"
@@ -59,6 +48,7 @@
         style="display:none;visibility:hidden"
       ></iframe
     ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
